# MachineLearning

./: CMakeLists.txt  README.md
cmake/: FindMLPACK.cmake
data/: iris_centroids.csv
include/: NeuralNetwork.hpp
src/: main.cpp  mlpack_nearest.cpp  mlpack_sample.cpp
tools/: download_data_set.py
